--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
 			<version>2.5.0</version>
 		</dependency>-->
 		
+		<dependency>
+		  <groupId>org.apache.shiro</groupId>
+		  <artifactId>shiro-core</artifactId>
+		  <version>1.1.0</version>
+		</dependency>
+		
 	</dependencies>
 
 
