--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,7 @@
         <param-value>
             classpath:/context/spring-dataSource.xml
             classpath:/context/spring-persist.xml 
+            classpath:/context/spring-shiro-redis.xml
             classpath:/context/spring-shiro.xml
         </param-value>
     </context-param>
@@ -23,6 +24,24 @@
     <listener>
         <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
     </listener>
+    
+    <!-- 配置Shiro过滤器,先让Shiro过滤系统接收到的请求 -->
+    <!-- 这里filter-name必须对应applicationContext.xml中定义的<bean id="shiroFilter"/> -->
+    <!-- 使用[/*]匹配所有请求,保证所有的可控请求都经过Shiro的过滤 -->
+    <!-- 通常会将此filter-mapping放置到最前面(即其他filter-mapping前面),以保证它是过滤器链中第一个起作用的 -->
+    <filter>
+        <filter-name>shiroFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <init-param>
+            <!-- 该值缺省为false,表示生命周期由SpringApplicationContext管理,设置为true则表示由ServletContainer管理 -->
+            <param-name>targetFilterLifecycle</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>shiroFilter</filter-name>
+        <url-pattern>*.do</url-pattern>
+    </filter-mapping>
 
     <filter>
         <filter-name>encodingFilter</filter-name>
@@ -46,24 +65,6 @@
 		<url-pattern>*.do</url-pattern>
 	</filter-mapping>
 	
-	<!-- 配置Shiro过滤器,先让Shiro过滤系统接收到的请求 -->
-    <!-- 这里filter-name必须对应applicationContext.xml中定义的<bean id="shiroFilter"/> -->
-    <!-- 使用[/*]匹配所有请求,保证所有的可控请求都经过Shiro的过滤 -->
-    <!-- 通常会将此filter-mapping放置到最前面(即其他filter-mapping前面),以保证它是过滤器链中第一个起作用的 -->
-    <filter>
-        <filter-name>shiroFilter</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-        <init-param>
-            <!-- 该值缺省为false,表示生命周期由SpringApplicationContext管理,设置为true则表示由ServletContainer管理 -->
-            <param-name>targetFilterLifecycle</param-name>
-            <param-value>true</param-value>
-        </init-param>
-    </filter>
-    <filter-mapping>
-        <filter-name>shiroFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    
     <servlet>
         <servlet-name>appServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -79,61 +80,6 @@
         <url-pattern>*.do</url-pattern>
     </servlet-mapping>
     
-    <!-- 下边这些静态资源，不需要springmvc处理 
-    <servlet-mapping>  
-        <servlet-name>default</servlet-name>  
-        <url-pattern>*.css</url-pattern>  
-    </servlet-mapping>  
-  
-    <servlet-mapping>  
-        <servlet-name>default</servlet-name>  
-        <url-pattern>*.gif</url-pattern>  
-    </servlet-mapping>  
-  
-    <servlet-mapping>  
-        <servlet-name>default</servlet-name>  
-        <url-pattern>*.jpg</url-pattern>  
-    </servlet-mapping>  
-  
-    <servlet-mapping>  
-        <servlet-name>default</servlet-name>  
-        <url-pattern>*.png</url-pattern>  
-    </servlet-mapping>  
-    
-    <servlet-mapping>  
-        <servlet-name>default</servlet-name>  
-        <url-pattern>*.js</url-pattern>  
-    </servlet-mapping>
-    
-    <servlet-mapping>  
-        <servlet-name>default</servlet-name>  
-        <url-pattern>*.eot</url-pattern>  
-    </servlet-mapping>
-    <servlet-mapping>  
-        <servlet-name>default</servlet-name>  
-        <url-pattern>*.svg</url-pattern>  
-    </servlet-mapping>
-    <servlet-mapping>  
-        <servlet-name>default</servlet-name>  
-        <url-pattern>*.ttf</url-pattern>  
-    </servlet-mapping>
-    <servlet-mapping>  
-        <servlet-name>default</servlet-name>  
-        <url-pattern>*.woff</url-pattern>  
-    </servlet-mapping>
-    <servlet-mapping>  
-        <servlet-name>default</servlet-name>  
-        <url-pattern>*.woff2</url-pattern>  
-    </servlet-mapping>
-    <servlet-mapping>  
-        <servlet-name>default</servlet-name>  
-        <url-pattern>*.otf</url-pattern>  
-    </servlet-mapping>
-    <servlet-mapping>  
-        <servlet-name>default</servlet-name>  
-        <url-pattern>/static/*</url-pattern>  
-    </servlet-mapping>
--->
     <session-config>
         <session-timeout>1800</session-timeout>
     </session-config>
