--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,6 @@ redis.pool.maxWaitMillis=3000
 # \u5728borrow\u4E00\u4E2Ajedis\u5B9E\u4F8B\u65F6\uFF0C\u662F\u5426\u63D0\u524D\u8FDB\u884Cvalidate\u64CD\u4F5C\uFF1B\u5982\u679C\u4E3Atrue\uFF0C\u5219\u5F97\u5230\u7684jedis\u5B9E\u4F8B\u5747\u662F\u53EF\u7528\u7684  
 redis.pool.testOnBorrow=true
 
-#session timeout, second unit
-shiro.session.timeout=86400
+#session timeout, millisecond unit
+shiro.session.timeout=86400000
 
